--- a/2020108161-고원.md
+++ b/2020108161-고원.md
@@ -6,7 +6,7 @@
 - 학번 : 2020108161
 - 전공 : 컴퓨터공학과
 - 이메일 : __<sallyko1@jejunu.ac.kr>__
-- 블로그 : 
+- 블로그 : __<https://kowon00.github.io/koblog/>__
 
 # 경험한 언어
 - 파이썬, 자바, C, C++
